# ultraman

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  periodic.yml  publish.yml  regression.yml  release.yml  update-homebrew.yml
containers/: Dockerfile
docs/: DEVELOP.md
example/check/: README.md
example/check/fixtures/: exit_0.sh  exit_1.sh
example/export/: Dockerfile  Procfile  README.md  docker-compose.yml
example/export/setup/: runit.sh  supervisord.sh
example/run/: Procfile  README.md
example/start/: .env  Gemfile  Procfile  README.md  config.ru
example/start/config/: puma.rb
man/: main.rs
scripts/: update_homebrew.sh
src/: config.rs  env.rs  log.rs  main.rs  opt.rs  output.rs  process.rs  procfile.rs  script.rs  signal.rs  stream_read.rs
src/cmd/: check.rs  completion.rs  mod.rs  run.rs  start.rs
src/cmd/export/: base.rs  daemon.rs  launchd.rs  mod.rs  runit.rs  supervisord.rs  systemd.rs  upstart.rs
src/cmd/export/templates/daemon/: master.conf.hbs  process.conf.hbs  process_master.conf.hbs
src/cmd/export/templates/launchd/: launchd.plist.hbs
src/cmd/export/templates/runit/: run.hbs
src/cmd/export/templates/runit/log/: run.hbs
src/cmd/export/templates/supervisord/: app.conf.hbs
src/cmd/export/templates/systemd/: master.target.hbs  process.service.hbs
src/cmd/export/templates/upstart/: process.conf.hbs  process_master.conf.hbs
src/log/: color.rs  mod.rs  plain.rs
src/logt/: color.rs  plain.rs
test/fixtures/: env.sh  for.sh  loop.sh
test/script/: .env  for.sh
