[package]
name = "ultraman"
version = "0.3.2"
authors = ["yukihirop <te108186@gmail.com>"]
repository = "https://github.com/yukihirop/ultraman"
edition = "2018"
keywords= ["foreman", "multiprocess", "multithread", "pipe"]
categories= ["command-line-utilities"]
license= "MIT"
readme = "README.md"
description = "Manage Procfile-based applications"
exclude = ["example/*", "man/*"]
default-run="ultraman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
dotenv = "0.15.0"
handlebars = "4.2.2"
nix = "0.23.1"
regex = "1.5.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
shellwords = "1.1.0"
signal-hook = "0.3.13"
structopt = "0.3.26"
# https://doc.rust-lang.org/nightly/cargo/reference/specifying-dependencies.html?highlight=git,version#multiple-locations
roff = { git = "https://github.com/yukihirop/roff-rs", version = ">=0.1.0", optional = true }
yaml-rust = "0.4.5"
crossbeam = "0.8.1"

[features]
man = [ "roff" ]

[dev-dependencies]
anyhow = "1.0.56"
libc = "0.2.121"
tempfile = "3.3.0"


[[bin]]
name = "ultraman"
path = "src/main.rs"

[[bin]]
name = "man"
path = "man/main.rs"
required-features = [ "man" ]
