[package]
name = "ultraman"
version = "0.3.3"
authors = ["yukihirop <te108186@gmail.com>"]
repository = "https://github.com/yukihirop/ultraman"
edition = "2018"
keywords= ["foreman", "multiprocess", "multithread", "pipe"]
categories= ["command-line-utilities"]
license= "MIT"
readme = "README.md"
description = "Manage Procfile-based applications"
exclude = ["example/*", "man/*"]
default-run="ultraman"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides]
x86_64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-mac.zip" }
aarch64-apple-darwin = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-aarch64-mac.zip" }
x86_64-unknown-linux-gnu = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-linux.zip" }
x86_64-unknown-linux-musl = { pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-x86_64-linux.zip" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
dotenv = "0.15.0"
handlebars = "4.2.2"
nix = "0.23.1"
regex = "1.5.5"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
shellwords = "1.1.0"
signal-hook = "0.3.13"
structopt = "0.3.26"
# https://doc.rust-lang.org/nightly/cargo/reference/specifying-dependencies.html?highlight=git,version#multiple-locations
roff = { git = "https://github.com/yukihirop/roff-rs", version = ">=0.1.0", optional = true }
yaml-rust = "0.4.5"
crossbeam = "0.8.1"

[features]
man = [ "roff" ]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic rather than unwinding
strip = true        # Strip symbols from binary

[dev-dependencies]
anyhow = "1.0.56"
libc = "0.2.121"
tempfile = "3.3.0"


[[bin]]
name = "ultraman"
path = "src/main.rs"

[[bin]]
name = "man"
path = "man/main.rs"
required-features = [ "man" ]
